[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nitros"
version = "0.1.2"
description = "Communication made insanely easy - A simple, fast, and reliable communication library for robotics"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "NitROS Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "msgpack>=1.0.0",
    "numpy>=1.19.0",
    "lz4>=3.1.0",
    "zeroconf>=0.38.0",
]

[project.scripts]
nitros = "nitros.cli:main"

[project.urls]
Homepage = "https://github.com/InputNamePlz/NitROS"
Repository = "https://github.com/InputNamePlz/NitROS"
Issues = "https://github.com/InputNamePlz/NitROS/issues"
